# pacing_too

./: .gitignore  Cargo.toml
src/: main.rs
src/core/: config.rs  lingo.rs  mechanics.rs  rand.rs
