[package]
name = "pacing_too"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
fastrand = "2.2.0"
heck = "0.5.0"
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = [ "serde", "serde-well-known" ] }
too = { version = "0.1.0", git = "https://github.com/museun/too", rev = "404ec47da8eebcefc3707d06807bb2a3dc3a8858" }
