[package]
name = "pacing_too"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
fastrand = "2.2.0"
heck = "0.5.0"
serde = { version = "1.0.214", features = [ "derive" ] }
serde_json = "1.0.132"
time = { version = "0.3.36", features = [ "serde", "serde-well-known" ] }
too = { git = "https://github.com/museun/too", rev = "7c4bf29dffefe1ad35df980fca6e922c16385510" }
